--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "daisyui": "^2.49.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropbox-chooser": "^0.0.5",
     "react-icons": "^4.7.1",
     "react-phone-number-input": "^3.2.18",
     "react-reveal": "^1.2.2",
