--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-paginate": "^8.1.4",
     "react-phone-number-input": "^3.2.18",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.7.0",
