--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.3.0-alpha1",
     "classnames": "^2.3.2",
     "daisyui": "^2.49.0",
+    "file-saver": "^2.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropbox-chooser": "^0.0.5",
