--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "om-epc-client",
+  "homepage" :"https://omepcsolution.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
